--- a/.github/workflows/runMovieStats.yml
+++ b/.github/workflows/runMovieStats.yml
@@ -13,7 +13,6 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run script
-      uses: peter-evans/powershell@v2
-      with:
-        args: |
-          .\scripts\checkMovieSessions.ps1
+      shell: pwsh
+      run: |
+        .\scripts\checkMovieSessions.ps1
