--- a/.github/workflows/runMovieStatsPS.yaml
+++ b/.github/workflows/runMovieStatsPS.yaml
@@ -10,4 +10,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Perform run on checkMovieSession file
         shell: pwsh
-        run: ./scripts/checkMovieSessions.ps1
+        run: /scripts/checkMovieSessions.ps1
