--- a/.github/workflows/runMovieStatsPS.yaml
+++ b/.github/workflows/runMovieStatsPS.yaml
@@ -10,5 +10,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Perform run on checkMovieSession file
         shell: pwsh
+        env:
+          githubtoken : ${{secrets.GITHUB_TOKEN_GENERATED }}
         run: |
           ./checkMovieStats.ps1
