--- a/.github/workflows/runMovieStatsPS.yaml
+++ b/.github/workflows/runMovieStatsPS.yaml
@@ -1,7 +1,7 @@
 name: Test PowerShell on Ubuntu
 on:
   schedule:
-    - cron: "0 6,8,10,12,13,14,15,16,17,18,19,20,21 * * *"
+    - cron: '*/30 * * * *'
 jobs:
   ps-test:
     name: Powershell test
